# beam

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/config/: mod.rs  server.rs
tests/: config_test.rs
tests/asset/: test_config.yaml
